--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.26.0",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-cookies": "^0.1.1",
