--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-
+# ===================================
+# = DATA SOURCE
+# ===================================
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XEPDB1
+spring.datasource.username=hr
+spring.datasource.password=hr
+# ===================================
+# = JPA / HIBERNATE
+# ===================================
+#spring.jpa.show-sql=false
+#spring.jpa.open-in-view=false
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+# ===================================
+# = SERVER PORT
+# ===================================
+server.port=8081
+# ===================================
