--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8081/api",
   "dependencies": {
     "axios": "^0.26.0",
     "jquery": "^3.6.0",
