--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # ===================================
 # = DATA SOURCE
 # ===================================
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XEPDB1
-spring.datasource.username=hr
-spring.datasource.password=hr
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XEPDB1
+#spring.datasource.username=hr
+#spring.datasource.password=hr
 # ===================================
 # = JPA / HIBERNATE
 # ===================================
