--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.26.0",
+    "http-proxy-middleware": "^2.0.3",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-cookies": "^0.1.1",
@@ -18,7 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true SSL_CRT_FILE='./cert/coaxer.crt' SSL_KEY_FILE='./cert/coaxer.key' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
