--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 # ===================================
 # = DATA SOURCE
 # ===================================
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XEPDB1
-#spring.datasource.username=hr
-#spring.datasource.password=hr
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/Coaxer?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=12341234
 # ===================================
 # = JPA / HIBERNATE
 # ===================================
-#spring.jpa.show-sql=false
-#spring.jpa.open-in-view=false
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 # ===================================
 # = SERVER PORT
 # ===================================
