--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.26.0",
+    "google-map-react": "^2.1.10",
     "http-proxy-middleware": "^2.0.3",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
