--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-slider": "^1.3.1",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
