--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.password=12341234
 # ===================================
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 # ===================================
