--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,7 @@
     "react-scripts": "5.0.0",
     "react-slider": "^1.3.1",
     "redux": "^4.1.2",
-    "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.4"
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "HTTPS=true SSL_CRT_FILE='./cert/coaxer.crt' SSL_KEY_FILE='./cert/coaxer.key' react-scripts start",
