--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^6.1.2",
     "axios": "^0.26.0",
     "google-map-react": "^2.1.10",
     "http-proxy-middleware": "^2.0.3",
@@ -17,7 +18,8 @@
     "react-scripts": "5.0.0",
     "react-slider": "^1.3.1",
     "redux": "^4.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "sockjs-client": "^1.6.0"
   },
   "scripts": {
     "start": "HTTPS=true SSL_CRT_FILE='./cert/coaxer.crt' SSL_KEY_FILE='./cert/coaxer.key' react-scripts start",
