--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-cookies": "^0.1.1",
+    "react-device-detect": "^2.1.2",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
